# pdf-merger-rs

./: Cargo.toml  README.md
src/: app.rs  main.rs  merge.rs  merge_pdf.rs
